--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -461,6 +461,13 @@ font-family: $header-font-family;
 		.inline-block {
 			display: inline-block;
 		}
+
+		.register-now {
+			@include media($mobile) {
+				margin-right: 0em !important;
+				margin-bottom: 20px;
+			}
+		}
 		
 		.become-a-sponsor {
 			@include media($mobile) {
@@ -522,6 +529,17 @@ font-family: $header-font-family;
 				}
 				
 			}
+			
+			@include media($tablet) {
+				margin-top: 2em;
+			}
+
+			@include media($portrait) {
+				margin-top: 2em;
+			}
+			
+
+			
 		}
 		
 	}
@@ -576,10 +594,11 @@ font-family: $header-font-family;
 
 #about {
 	
-	@include media($desktop) {
-		padding-bottom: 300px;
-	}
-	
+	padding-bottom: 300px;
+
+  @include media($mobile) {
+  	padding-bottom: 50px  
+  }
 	
 	.row {
 		@include row();
@@ -590,18 +609,13 @@ font-family: $header-font-family;
 		
 		.column {
 			text-align: center;
-			@include span-columns(2);
+			@include span-columns(3 of 15);
+			@include omega(5n);
 			
 			@include media($mobile) {
 				@include fill-parent();
 			}
-			
-			&:first-child {
-				@include media($desktop) {
-					@include shift(1);	
-				}
-			}
-			
+						
 			figure {
 				margin: 80px auto 40px;
 				width: 90%;
@@ -654,6 +668,21 @@ font-family: $header-font-family;
 			left: 0;
 			right: 0;			
 		}
+
+		@include media($portrait) {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			right: 0;			
+		}
+
+		@include media($tablet) {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			right: 0;			
+		}
+
 		
 		@include media($mobile) {
 			display: none;
@@ -664,26 +693,20 @@ font-family: $header-font-family;
 	
 	.container {
 		position: relative;
+		height: 100px;
 		
 		@include media($desktop) {
 			@include outer-container(1200px);		
 		}
 	
 		@include media($tablet) {
-			width: 100%;
-			padding: 0 5%;			
+			@include outer-container(900px);		
 		}
 	
 		@include media($portrait) {
-			width: 100%;
-			padding: 0 5%;			
+			@include outer-container(600px);		
 		}
 		
-		@include media($mobile) {
-			width: 100%;
-			padding: 0 5%;			
-		}
-
 		
 		.avatar {
 			width: 100px;
@@ -710,11 +733,17 @@ font-family: $header-font-family;
 			top: 50%;
 			@include transform(translateY(-50%));
 			
+			@include media($portrait) {
+				right: 40px;
+			}
 		}
 		
 		#more-quotes {
 			float: right;
 			margin: 30px 0 0;
+			@include media($portrait) {
+				display: none;
+			}
 		}
 	
 	}
@@ -732,8 +761,22 @@ font-family: $header-font-family;
 			
 			.speaker {
 				
-				@include span-columns(4 of 20);
-				@include omega(5n);
+        @include media($desktop) {
+  				@include span-columns(4 of 20);
+  				@include omega(5n);        	
+        }
+        
+        @include media($tablet) {
+  				@include span-columns(5 of 20);
+  				@include omega(4n);        	
+        }
+
+        @include media($portrait) {
+  				@include span-columns(5 of 20);
+  				@include omega(4n);        	
+        }
+
+
 				margin-bottom: 50px;
 				
 				@include media($mobile) {
@@ -754,7 +797,6 @@ font-family: $header-font-family;
 						@include media($mobile) {
 							float: none;
 							width: 80%;
-              padding-top: 80%;
 							margin: 30px;
 						}
 							
@@ -1128,7 +1170,7 @@ font-family: $header-font-family;
 					@include transition(0.5s all);
 					
           &:hover {
-						opacity:0.8;
+						opacity: 0.8;
 						@include transition(0.5s all);
 					}
 				}
@@ -1206,6 +1248,23 @@ font-family: $header-font-family;
 	font-family: $header-font-family;
   font-weight: 500;
   text-transform: uppercase;
+  
+  @include media($tablet) {
+  	top: 40px;
+  	right: 130px;
+  }
+  
+  @include media($portrait) {
+  	top: 30px;
+  	right: 120px;
+  }
+  
+  @include media($mobile) {
+  	display: none;  
+  }
+  
+  
+  
 }
 
 #menu-link {
@@ -1229,6 +1288,8 @@ font-family: $header-font-family;
 	}
 	
 	@include media($mobile) {
+  	width: 48px;
+  	height: 48px; 
 		top: 20px;
 		right: 20px;
 	}
@@ -1370,6 +1431,17 @@ nav#overlay {
     		li {
       		display: inline-block;
       		margin: 0 1em;
+      		
+      		@include media($portrait) {
+      			display: block;
+      			padding: 10px 0;
+      		}
+      		
+      		@include media($mobile) {
+      			display: block;  
+      			padding: 10px 0;
+      		}
+      		
       		
       		a {
         		display: inline-block;
@@ -1804,10 +1876,8 @@ nav#overlay {
       }
 
       @include media($mobile) {
-        float: left;
-        display: block;
-        margin-right: 1.6949152542%;
-        width: 49.1525423729%;
+      
+        @include fill-parent();
 
         &:last-child {
           margin-right: 0;
@@ -1883,7 +1953,7 @@ nav#overlay {
       }
 
       @include media($mobile) {
-        @include span-columns(12);
+        width: 100%;
       }
       
       
@@ -1902,7 +1972,8 @@ nav#overlay {
       }
 
       @include media($mobile) {
-        @include span-columns(12);
+        width: 80%;
+        margin: 0 auto 20px;
       }
         
         
@@ -1928,11 +1999,21 @@ nav#overlay {
             -webkit-transform:translateX(-50%);
             @include transform(translateX(-50%));
             
+            @include media($mobile) {
+            	top: 20px;  
+            }
+            
+            
             
           }
           
           .price {
             font-size: em(150);
+            
+            @include media($mobile) {
+            	font-size: em(120);  
+            }
+            
             line-height: 1em;
             font-family: $header-font-family;
             position: absolute;
@@ -1940,6 +2021,11 @@ nav#overlay {
             left: 50%;
             -webkit-transform:translateX(-50%);
             @include transform(translateX(-50%));
+
+            @include media($mobile) {
+            	top: 100px;  
+            }
+            
 
             small {
               position: absolute;
@@ -1966,6 +2052,12 @@ nav#overlay {
             bottom: 50px;
             left: 0;
             right: 0;
+            
+            @include media($mobile) {
+            	bottom: 20px;  
+            }
+            
+            
             .button {
               background: $blue;
               white-space: nowrap;
@@ -1976,6 +2068,12 @@ nav#overlay {
               padding: 10px 20px;
               font-weight: bold;
               display: inline-block;
+              
+              @include media($mobile) {
+              	font-size: em(30)  
+              }
+              
+              
             }
           }
           
@@ -2118,6 +2216,11 @@ nav#overlay {
           padding: 20px 80px 20px 240px;
           position: relative;
           
+          @include media($mobile) {
+          	padding: 50px 10px 10px 80px;  
+          }
+          
+          
           .time {
             position: absolute;
             left: 80px;
@@ -2125,6 +2228,13 @@ nav#overlay {
             font-size: em(20);
             font-weight: 600;
             color: $gray;
+            
+            @include media($mobile) {
+            	font-size: em(18);  
+            	top: 15px;
+            }
+            
+            
           }
           
           .name {
@@ -2147,6 +2257,13 @@ nav#overlay {
               font-weight: 600;
               display: block;
               
+              @include media($mobile) {
+              	font-size: em(18);  
+              	line-height: 1.1em;
+              	margin-bottom: 1ex
+              }
+              
+              
             }
             
             .person {
@@ -2155,6 +2272,12 @@ nav#overlay {
               font-weight: 600;
               display: block;
               color: $gray;
+              
+              @include media($mobile) {
+              	font-size: em(16);  
+              	line-height: 1.1em;
+              }
+              
               
             }
             
