improv: partner logo
Put DevTalk logo on PolyConf website

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1702,6 +1702,7 @@ nav#overlay {
 
 			float: left;		
 			width: 20%;
+            min-height: 144px;
 			padding: 0 4%;
 						
 			img {
@@ -1718,15 +1719,15 @@ nav#overlay {
 			}
 
             &.bitspiration {
-              margin-top: 4.7%;
+              padding-top: 4.7%;
             }
 
             &.infoq {
-              margin-top: 4%;
+              padding-top: 4%;
             }
 
             &.techtrrrs {
-              margin-top: 1.7%;
+              padding-top: 1.7%;
             }
 			
 		}
