--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1532,6 +1532,7 @@ nav#overlay {
     #partners ul.partners .partner {
       float: left;
       width: 20%;
+      min-height: 144px;
       padding: 0 4%; }
       #partners ul.partners .partner img {
         display: block;
@@ -1544,11 +1545,11 @@ nav#overlay {
           max-width: 200px;
           margin: 0 auto; } }
       #partners ul.partners .partner.bitspiration {
-        margin-top: 4.7%; }
+        padding-top: 4.7%; }
       #partners ul.partners .partner.infoq {
-        margin-top: 4%; }
+        padding-top: 4%; }
       #partners ul.partners .partner.techtrrrs {
-        margin-top: 1.7%; }
+        padding-top: 1.7%; }
 
 #terms h2 {
   font-size: 1.5em; }
