--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1644,6 +1644,10 @@ nav#overlay {
                   }
 
                 }
+
+                &.stackbuilders {
+                  margin-top: 6%;
+                }
 			}
 			
 		}
