"More" first implementation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1934,38 +1934,22 @@ nav#overlay {
         #agenda .day .event-list .event .long p {
           margin: 0;
           line-height: 1.25em; }
-      #agenda .day .event-list .event.with-description .short:after {
-        font-weight: 600;
-        padding: 0 10px;
-        line-height: 30px;
-        text-transform: uppercase;
-        display: inline-block;
-        height: 30px;
-        width: 30px;
-        border-radius: 100%;
+      #agenda .day .event-list .event .buttons {
         position: absolute;
-        right: 20px;
         top: 20px;
-        background: #6c7173;
-        color: #fff;
-        content: "";
-        display: none; }
-      #agenda .day .event-list .event.with-description .long:after {
-        font-weight: 600;
-        padding: 0 10px;
-        line-height: 30px;
-        text-transform: uppercase;
-        display: inline-block;
-        height: 30px;
-        width: 30px;
-        border-radius: 100%;
-        position: absolute;
-        right: 20px;
-        top: 20px;
-        background: #6c7173;
-        color: #fff;
-        content: "";
-        display: none; }
+        right: 20px; }
+        #agenda .day .event-list .event .buttons .close-button {
+          display: none; }
+        #agenda .day .event-list .event .buttons .more-button {
+          display: inline-block;
+          background: #6c7173;
+          padding: 4px 8px;
+          font-size: 1em;
+          font-weight: 500;
+          color: #fff;
+          line-height: 1em;
+          text-transform: uppercase;
+          border-radius: 2px; }
       #agenda .day .event-list .event.lightning .short .name:before {
         font-weight: 600;
         padding: 0 10px;
