--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2326,59 +2326,32 @@ nav#overlay {
           
         }
   
-  
-        &.with-description {
+        .buttons {
           
-          .short:after {
+          position: absolute;
+          top: 20px;
+          right: 20px;
+          
+          .close-button {
             
-            font-weight: 600;
-            padding: 0 10px;
-            line-height: 30px;
-            text-transform: uppercase;
-            display: inline-block;
-            height: 30px;
-            width: 30px;
-            border-radius: 100%;
-            position: absolute;
-            right: 20px;
-            top: 20px;
-            background: $gray;
-            color: #fff;
-            content: "";
-
-
             display: none;
-
-
+            
           }
           
-          .long:after {
-            
-            font-weight: 600;
-            padding: 0 10px;
-            line-height: 30px;
-            text-transform: uppercase;
+          .more-button {
             display: inline-block;
-            height: 30px;
-            width: 30px;
-            border-radius: 100%;
-            position: absolute;
-            right: 20px;
-            top: 20px;
             background: $gray;
+            padding: 4px 8px;
+            font-size: em(16px);
+            font-weight: 500;
             color: #fff;
-            content: "";
-
-
-            display: none;
-
-
+            line-height: 1em;
+            text-transform: uppercase;
+            border-radius: 2px;
           }
           
-  
-  
-        }
-        
+        }          
+          
         &.lightning {
           
           .short {
@@ -2571,7 +2544,7 @@ nav#overlay {
       
       h4 {
         
-        font-size: em(18);  
+        font-size: em(18  );  
         margin: 1em 0 0.5em;
         font-weight: 500;
         
