--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2424,6 +2424,20 @@ nav#overlay {
           }
           
         }
+
+        &.workshops {
+          
+          .short {
+            
+            &:before {
+              
+              background: #666 url(../icons/coffee.svg) no-repeat center 19px;
+              background-size: auto 40px;
+              
+            }
+          }
+        }
+
   
         &.coffee, &.lunch {
           
@@ -2484,11 +2498,6 @@ nav#overlay {
     &:last-of-type {
       border-bottom: none;
     }
-
-    &:first-of-type {
-      padding-top: 0;
-    }
-
 
     h2 {
       
