improv: added partner logo
Add DevMeeting logo on PolyConf website


Former-commit-id: cc9099ff3d5fc6893b99a00cdeb26d1ce25dc878
Former-commit-id: 3e5c182129617b3595958bd5c237529cad861a1c
Former-commit-id: 965f136dc052c5134c1e617fe3d1221e5ddc2ed5

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1548,6 +1548,8 @@ nav#overlay {
         padding-top: 1.7%; }
       #partners ul.partners .partner.pyladies-poland {
         padding-top: 1%; }
+      #partners ul.partners .partner.devmeetings{
+        padding-top: 5.7%; }
 
 #terms h2 {
   font-size: 1.5em; }
