--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1767,6 +1767,10 @@ nav#overlay {
             &.pyladies-poland {
               padding-top: 1%;
             }
+
+            &.devmeetings {
+              padding-top: 5.7%;
+            }
 			
 		}
 		
